# opsmate

./: .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  sugar.py
.github/workflows/: ci.yml  eval.yml  publish.yml  site.yml
CLI/: index.html
CLI/chat/: index.html
CLI/db-migrate/: index.html
CLI/db-revisions/: index.html
CLI/db-rollback/: index.html
CLI/ingest/: index.html
CLI/ingest-prometheus-metrics-metadata/: index.html
CLI/install/: index.html
CLI/list-contexts/: index.html
CLI/list-models/: index.html
CLI/list-runtimes/: index.html
CLI/list-tools/: index.html
CLI/reset/: index.html
CLI/run/: index.html
CLI/schedule-embeddings-reindex/: index.html
CLI/serve/: index.html
CLI/solve/: index.html
CLI/uninstall/: index.html
CLI/worker/: index.html
cli/: main.go
cli/sdk/: README.md  api_default.go  configuration.go  model_run_request.go
configurations/OTel/: index.html
configurations/add-new-llm-providers/: index.html
configurations/advanced-knowledge-retrieval/: index.html
configurations/integrate-with-new-runtime/: index.html
configurations/llm-configurations/: index.html
configurations/use-cloud-storage-for-embeddings-storage/: index.html
contrib/providers/groq/: pyproject.toml
cookbooks/: index.html
cookbooks/5-levels-of-workflow-orchestration/: index.html
cookbooks/automation-using-python-runtime/: index.html
cookbooks/docker-runtime/: index.html
cookbooks/interacting-with-mysql-using-opsmate/: index.html
cookbooks/k8s-runtime/: index.html
cookbooks/knowledge-management/: index.html
cookbooks/manage-vms/: index.html
cookbooks/plugin-system/: index.html
development/: index.html
docs/: cli.md  development.md  index.md  production.md
docs/CLI/: chat.md  ingest-promethues-metrics-metadata.md  ingest.md  list-contexts.md  list-models.md  list-tools.md  reset.md  run.md  schedule-embeddings-reindex.md  serve.md  solve.md  worker.md
docs/cookbooks/: 5-levels-of-workflow-orchestration.ipynb  automation-using-python-runtime.ipynb  docker-runtime.md  index.md  knowledge-management.ipynb  manage-vms.md  plugin-system.ipynb
docs/experiments/: prometheus.ipynb
docs/integrations/: OTel.md  add-new-llm-providers.md  integrate-with-new-runtime.md
eval/: issues.yaml  q_n_a.yaml
eval/bootstrap/: bootstrap.py  main.py
eval/notebooks/: knowledge.ipynb  synthetic_eval_dataset.json  synthetic_ft_dataset.jsonl
eval/tests/: eval_test.py  test_eval.py
eval/types/: __init__.py
evals/: build.sh  eval_main.py  scorers.py
evals/scenarios/: investigation-005-db-connection.yaml  text-edit-001-missing-resources-config.yaml
examples/tools/mysql/: README.md  pyproject.toml
examples/tools/mysql/fixtures/: docker-compose.yml
examples/tools/mysql/mysql/: tool.py
examples/tools/mysql/src/opsmate_tools_mysql/: runtime.py  tool.py
experimentals/: main.py
experiments/prometheus/: index.html
experiments/sandbox/: compose.yml
hack/: Dockerfile  README.md  app.py  deploy.yml  gen-docs.py
how-to-o11y-with-tempo/: index.html
macros/: index.html
opsmate/: cli.py  main.py
opsmate/apiserver/: __init__.py  apiserver.py  gui.py
opsmate/app/: base.py
opsmate/cli/: cli.py  formatting.py
production/: index.html
providers/: index.html
scripts/: api-gen.py
search/: search_index.json
tests/: traceit_test.py
tools/: index.html
(+201 files in other folders)
