[tool.poetry]
name = "opsmate"
version = "0.1.1"
description = "opsmate is a SRE AI assistant"
authors = ["Jingkai <jingkai@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
openai = "^1.37.2"
jinja2 = "^3.1.4"
instructor = {extras = ["anthropic"], version = "^1.6.3"}
structlog = "^24.4.0"
pyyaml = "^6.0.2"
click = "^8.1.7"
openai-otel = "^0.1.0a1"
opentelemetry-exporter-otlp = "^1.27.0"
rich = "^13.8.1"
langchain-text-splitters = "^0.3.2"
lancedb = "^0.15.0"
pydantic-settings = "^2.6.1"

[tool.poetry.scripts]
opsmate = "opsmate.cli:opsmate_cli"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
jupyterlab = "^4.3.0"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
