[project]
name = "opsmate-provider-groq"
version = "0.1.0"
description = "Groq provider for opsmate"
dependencies = [
    "opsmate",
    "groq>=0.22.0",
]

[tool.uv.sources]
opsmate = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["provider_groq.py"]

[project.entry-points."opsmate.dino.providers"]
groq = "provider_groq:GroqProvider"
