[project]
name = "opsmate-tools-mysql"
version = "0.1.0"
description = "MySQL tool for opsmate"
dependencies = [
    "opsmate",
    "pymysql[rsa]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["opsmate_tools_mysql"]

[project.entry-points."opsmate.tools"]
tool = "opsmate_tools_mysql.tool:MySQLTool"

[project.entry-points."opsmate.runtime.runtimes"]
runtime = "opsmate_tools_mysql.runtime:MySQLRuntime"
